name:                haskell-hwloc
version:             0.1.0.0
synopsis:            Bindings to HWLOC library
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Sylvain HENRY
maintainer:          hsyl20@gmail.com
-- copyright:           
category:            System
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:
         System.Hwloc
      ,  System.Hwloc.Bitmap
  -- other-modules:       
  -- other-extensions:    
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -Wall -O3 -threaded
  build-depends:       
      base                    >=4.8       && < 4.9
   ,  c-storable-deriving     >= 0.1.2    && < 0.2
   ,  vector                  >= 0.11     && < 0.12
   ,  containers              >= 0.5      && < 0.6
   ,  text                    >= 1.2      && < 1.3
